2005-06-01  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c (_cairo_gstate_get_clip_extents): Fix bug in
	converting box to rectangle that left clip_rect.height
	uninitialized, (leading to unpredictable, intermittent test
	failures).

2005-05-31  Carl Worth  <cworth@cworth.org>

	* src/cairo.h:
	* src/cairo.c: (cairo_status_to_string), (cairo_status_string):
	Add new function cairo_status_to_string an reimplement
	cairo_status_string in terms of the new function.

2005-05-27  Olivier Andrieu  <oliv__a@users.sourceforge.net>

	* src/cairo-path-data.c (_cpdc_curve_to_flatten),
	(_cpdp_curve_to_flatten) : Fix memory leak

2005-05-26  Keith Packard  <keithp@keithp.com>

	reviewed by: krh, otaylor, cworth

	Replace nesting-only surface clipping with gstate contained
	serial-number tracked clipping sets that are loaded into the surface
	on demand just before each rendering operation.  This permits
	multiple cairo_t contexts to reference a surface without
	regard to ordering of operations among the contexts.

	Also in this patch is a change to the xlib surface that
	creates two separate Pictures, one for source and one for
	destination operands which separates the source clipping
	from destination clipping.  Cairo now specifies that sources
	are never clipped by any clipping applied to them as destinations.

	* src/cairoint.h:
	* src/cairo-gstate-private.h:
	Move cairo_clip_t (renamed from cairo_clip_rec_t) from cairoint.h
	to cairo-gstate-private.h.  Eliminate stack of clip state
	from surfaces.  Add new surface clipping API.
	
	* src/cairo-gstate.c: (_cairo_gstate_init),
	(_cairo_gstate_init_copy), (_cairo_gstate_fini),
	(_cairo_gstate_has_surface_clip), (_cairo_gstate_set_clip),
	(_cairo_gstate_get_clip_extents),
	(_cairo_gstate_set_target_surface), (_cairo_gstate_paint),
	(_cairo_gstate_combine_clip_surface),
	(_cairo_gstate_intersect_clip), (_get_mask_extents),
	(_cairo_gstate_mask), (_cairo_gstate_stroke),