@@ -20,6 +20,7 @@ pixman-rotate			\
 scale-source-surface-paint	\
 select-font-no-show-text	\
 self-copy			\
+self-intersecting		\
 set-source			\
 source-clip			\
 source-surface-scale-paint	\
@@ -67,6 +68,7 @@ path-data-ref.png			\
 pixman-rotate-ref.png			\
 romedalen.png				\
 self-copy-ref.png			\
+self-intersecting-ref.png		\
 scale-source-surface-paint-ref.png	\
 set-source-ref.png			\
 source-clip-ref.png			\
@@ -145,6 +147,7 @@ pixman_rotate_LDADD = $(LDADDS)
 scale_source_surface_paint_LDADD = $(LDADDS)
 select_font_no_show_text_LDADD = $(LDADDS)
 self_copy_LDADD = $(LDADDS)
+self_intersecting_LDADD = $(LDADDS)
 set_source_LDADD = $(LDADDS)
 source_clip_LDADD = $(LDADDS)
 source_surface_scale_paint_LDADD = $(LDADDS)
