@@ -1,5 +1,14 @@
 2005-06-01  Carl Worth  <cworth@cworth.org>
 
+	* test/.cvsignore:
+	* test/Makefile.am:
+	* test/self-intersecting-ref.png:
+	* test/self-intersecting.c: (draw), (main): Add self-intersecting
+	test which demonstrates the long-standing bug with stroking
+	self-intersecting paths.
+
+2005-06-01  Carl Worth  <cworth@cworth.org>
+
 	* src/cairo-gstate.c (_cairo_gstate_get_clip_extents): Fix bug in
 	converting box to rectangle that left clip_rect.height
 	uninitialized, (leading to unpredictable, intermittent test
